test/samples/invalid/tc/polymorphic_struct.maruir
struct S<M> {
	arr: u256[] *M;
}

fun foo(s: S<#memory> *#memory)
locals ptr: u256[] * #storage;
{
	entry:

	load s.arr in ptr;
	return;
}
